--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"autoprefixer": "^10.4.20",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"colorthief": "latest",
 		"lucide-react": "^0.454.0",
 		"next": "15.1.0",
 		"next-themes": "^0.4.4",
@@ -36,13 +37,15 @@
 		"recharts": "2.15.0",
 		"sonner": "^1.7.1",
 		"tailwind-merge": "^2.5.5",
-		"tailwindcss-animate": "^1.0.7",
-		"colorthief": "latest"
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@types/node": "^22",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.2.2",
+		"eslint-config-prettier": "^10.1.1",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5"
