--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"autoprefixer": "^10.4.20",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"color": "^5.0.0",
 		"colorthief": "latest",
 		"lucide-react": "^0.454.0",
 		"next": "15.1.0",
