--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"color": "^5.0.0",
-		"colorthief": "latest",
+		"colorthief": "^2.6.0",
 		"lucide-react": "^0.454.0",
 		"next": "15.1.0",
 		"next-themes": "^0.4.6",
@@ -39,6 +39,7 @@
 		"eslint-config-next": "15.2.2",
 		"eslint-config-prettier": "^10.1.1",
 		"postcss": "^8.5.3",
+		"prettier": "^3.5.3",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.8.2"
 	}
